tests/error/errors_on_usage/if_expr_type_change.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool, a: int) -> int:
    y = 3
    (y := False) if x or a > 5 else 0
    z = y
    return 42
