tests/error/errors_on_usage/if_expr_type_change.err
Error: Different types (at $FILE:8:8)
  | 
6 |     y = 3
7 |     (y := False) if x or a > 5 else 0
8 |     z = y
  |         ^ Variable `y` may refer to different types
  | 
6 |     y = 3
  |     - This is of type `int`
  | 
7 |     (y := False) if x or a > 5 else 0
  |      - This is of type `bool`

Guppy compilation failed due to 1 previous error
